feat: add prompt answer character counter in Profile Setup activity

--- a/app/src/main/res/layout/activity_preference_settings.xml
+++ b/app/src/main/res/layout/activity_preference_settings.xml
@@ -365,9 +365,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_18ssp"
-                android:visibility="visible"
-                app:drawableEndCompat="@drawable/ic_start"
-                app:drawableTint="@color/white" />
+                android:visibility="visible" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
