--- a/app/src/main/res/layout/fragment_fifth_profile_setup.xml
+++ b/app/src/main/res/layout/fragment_fifth_profile_setup.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".views.registration.ThirdProfileSetup">
+    tools:context=".views.registration.ThirdProfileSetup"
+    android:layout_marginTop="@dimen/_20sdp">
 
     <RelativeLayout
         android:id="@+id/text_title"
