--- a/app/src/main/res/layout/fragment_intro_profile_setup.xml
+++ b/app/src/main/res/layout/fragment_intro_profile_setup.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".views.registration.IntroProfileSetup">
+    tools:context=".views.registration.IntroProfileSetup"
+    android:layout_gravity="center">
 
     <TextView
         android:layout_width="wrap_content"
