--- a/app/src/main/res/layout/row_anser_prompt.xml
+++ b/app/src/main/res/layout/row_anser_prompt.xml
@@ -21,6 +21,16 @@
             android:textColor="@color/black"
             android:textSize="@dimen/_20ssp" />
 
+        <TextView
+            android:id="@+id/text_char_count_answer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/ptsans_bold"
+            android:text="0/6"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16ssp"
+            android:layout_gravity="end" />
+
         <EditText
             android:id="@+id/text_answer"
             android:layout_width="match_parent"
@@ -33,7 +43,7 @@
             android:hint="your answer.."
             android:inputType="textMultiLine"
             android:lines="4"
-            android:maxLength="250"
+            android:maxLength="500"
             android:padding="@dimen/_10sdp"
             android:textColor="@color/black"
             android:textSize="@dimen/_14ssp" />
@@ -45,8 +55,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:src="@drawable/add_photo"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:layout_marginBottom="@dimen/_20sdp"/>
+            android:layout_marginTop="@dimen/_20sdp" />
 
         <TextView
             android:layout_width="wrap_content"
