--- a/app/src/main/res/layout/row_anser_prompt.xml
+++ b/app/src/main/res/layout/row_anser_prompt.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/ptsans_bold"
-            android:text="0/6"
+            android:text=""
             android:textColor="@color/black"
             android:textSize="@dimen/_16ssp"
             android:layout_gravity="end" />
@@ -43,7 +43,7 @@
             android:hint="your answer.."
             android:inputType="textMultiLine"
             android:lines="4"
-            android:maxLength="500"
+            android:maxLength="150"
             android:padding="@dimen/_10sdp"
             android:textColor="@color/black"
             android:textSize="@dimen/_14ssp" />
@@ -66,6 +66,16 @@
             android:textColor="@color/black"
             android:textSize="@dimen/_16ssp" />
 
+        <TextView
+            android:id="@+id/text_char_count_caption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/ptsans_bold"
+            android:text=""
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16ssp"
+            android:layout_gravity="end" />
+
         <EditText
             android:id="@+id/text_caption_image"
             android:layout_width="match_parent"
@@ -77,7 +87,7 @@
             android:hint="enter a caption"
             android:inputType="textMultiLine"
             android:lines="2"
-            android:maxLength="150"
+            android:maxLength="50"
             android:padding="@dimen/_10sdp"
             android:textColor="@color/black"
             android:textSize="@dimen/_14ssp" />
