--- a/app/src/main/res/layout/fragment_first_profile_setup.xml
+++ b/app/src/main/res/layout/fragment_first_profile_setup.xml
@@ -5,8 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".views.registration.IntroProfileSetup"
-    android:layout_gravity="center">
+    tools:context=".views.registration.FirstProfileSetup"
+    android:layout_gravity="center"
+    android:id="@+id/containermain">
 
     <TextView
         android:layout_width="wrap_content"
