--- a/app/src/main/res/layout/activity_account_settings.xml
+++ b/app/src/main/res/layout/activity_account_settings.xml
@@ -57,10 +57,75 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/ptsans_bold"
+                android:text="Details"
+                android:textAllCaps="true"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16ssp" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:background="?attr/selectableItemBackground">
+
+                <TextView
+                    android:id="@+id/text_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:fontFamily="@font/ptsans_regular"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
+                    android:text=""
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_14ssp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_email" />
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground">
+
+                <TextView
+                    android:id="@+id/text_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:fontFamily="@font/ptsans_regular"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
+                    android:text=""
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_14ssp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_phone" />
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_25sdp"
+                android:fontFamily="@font/ptsans_bold"
                 android:text="Notifications"
                 android:textAllCaps="true"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_16ssp" />
+
             <TextView
                 android:id="@+id/text_prompt_notification_preference"
                 android:layout_width="match_parent"
@@ -85,9 +150,9 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
+                    android:fontFamily="@font/ptsans_regular"
                     android:paddingTop="@dimen/_5sdp"
                     android:paddingBottom="@dimen/_5sdp"
-                    android:fontFamily="@font/ptsans_regular"
                     android:text="Match Notifications"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_14ssp" />
@@ -120,9 +185,9 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
+                    android:fontFamily="@font/ptsans_regular"
                     android:paddingTop="@dimen/_5sdp"
                     android:paddingBottom="@dimen/_5sdp"
-                    android:fontFamily="@font/ptsans_regular"
                     android:text="Chat Notifications"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_14ssp" />
@@ -155,9 +220,9 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
+                    android:fontFamily="@font/ptsans_regular"
                     android:paddingTop="@dimen/_5sdp"
                     android:paddingBottom="@dimen/_5sdp"
-                    android:fontFamily="@font/ptsans_regular"
                     android:text="Like Notifications"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_14ssp" />
@@ -187,6 +252,7 @@
                 android:textAllCaps="true"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_16ssp" />
+
             <!-- Sign Out  -->
             <RelativeLayout
                 android:id="@+id/button_deactivate_settings"
@@ -202,9 +268,9 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
+                    android:fontFamily="@font/ptsans_regular"
                     android:paddingTop="@dimen/_5sdp"
                     android:paddingBottom="@dimen/_5sdp"
-                    android:fontFamily="@font/ptsans_regular"
                     android:text="Delete Account"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_14ssp" />
@@ -216,6 +282,7 @@
                     android:layout_centerVertical="true"
                     android:src="@drawable/ic_deactivate_account" />
             </RelativeLayout>
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
