--- a/app/src/main/res/layout/activity_feedback_form.xml
+++ b/app/src/main/res/layout/activity_feedback_form.xml
@@ -97,7 +97,7 @@
             android:textSize="@dimen/_14ssp" />
 
         <EditText
-            android:id="@+id/edit_text_bio"
+            android:id="@+id/edit_text_comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_5sdp"
@@ -114,7 +114,7 @@
             android:textIsSelectable="false"/>
 
         <TextView
-            android:id="@+id/open_preference_settings_button"
+            android:id="@+id/submit__feedback_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
